@@ -2,18 +2,12 @@
 # | one of: 'sphere','spheres' (or 'agglomerate'), or 'ellipsoid'
 grain-geometry                 = 'spheres'	
 
-verbose                        = F
+verbose                        = T
 use-efficiencies               = T
 use-padded-fft                 = F
-integrated                     = T
+integrated                     = F
 force-numerical                = F
-do-full-2d-fft                 = F
-do-phi-averaging               = F
-
-
-save-shadow-function           = F
-save-file-root                 = ''
-
+do-full-2d-fft                 = T
 axes-convention                = 'ddscat'
 
 # effective radius (radius of sphere with same volume)
@@ -21,14 +15,14 @@ aeff                           = 0.2
 # Number of grid elements (along one dimension) to resolve grain
 ngrain                         = 128
 
-# IF grain-geometery=ellipsoid (these are all ratios)
+# IF grain-geometery is set to 'ellipsoid' (these are all ratios)
 # grain-axis-x                   = 1.0
 # grain-axis-y                   = 1.0
 # grain-axis-z                   = 1.0
 
-# IF grain-geometry=agglomerate
-agglom-file                    = 'BAM2.256.1.targ'
-agglom-composition-file        = ''
+# IF grain-geometry is set to 'agglomerate'
+agglom-file                    = 'BA.256.1.targ'
+# agglom-composition-file        = ''
 
 # Grain composition
 # Path to material index file
@@ -36,11 +30,11 @@ material-file                  = "index_silD03"
 
 # parameters for differential scattering cross section calculation
 # units: keV
-#ephot                          = 2.0
+ephot                          = 0.5
 #  Re(m-1)
-#ior-re                         =-1.920E-4
+# ior-re                         =-1.920E-4
 #  Re(m)
-#ior-im                         = 2.807E-5
+# ior-im                         = 2.807E-5
 # | 
 # | DO NOT define ior-re or ior-im if you also have defined 
 # | a material-file and 'ephot'. It will pull m(E) automatically.
@@ -48,30 +42,28 @@ material-file                  = "index_silD03"
 
 ## number of angles to calculate diff. scat. cross section (ntheta) or spacing between them (dtheta)
 # (arcseconds) Choose only one of these parameters 
-#dtheta                         = 25.0
-#nscatter                      = 100
+dtheta                         = 25.0
+# nscatter                      = 100
 
 ## Maximum angle for which the diff. scat. cross section is calculated
 # (arcseconds)
-#max-angle                      = 1500.
-
-#grain_axis_ratio              = 1.0
+max-angle                      = 6000.
 
 angle-mode                     = 'random'   # Either 'sequential', 'random' or 'file' 
                                             # | tells GGADT how to choose orientations over which to average
                                             # | calculations.
 angle-file                     = ''         # If angle-mode='file'; Path to file listing angles
                                             # | over which to average calculations      
-norientations                  = 64
+norientations                  = 1
 											# If angle-mode is NOT 'file'; number of orientations
                                             # | over which to average calcuations
 # For integrated cross section (pass --integrated flag)
 # number of photon energies to calculate integrated cross sections
-#nephots                       = 100
+# nephots                       = 100
 # | OR define energy spacing
-dephot                         = 0.001
+# dephot                         = 0.1
 # minimum photon energy 		
-ephot-min                      = 0.1
+# ephot-min                      = 0.1
 # maximum photon energy
-ephot-max                      = 5.0
+# ephot-max                      = 5.0
 
