@@ -1,3 +1,9 @@
+* commit bdd15fd02ac3dd7d5628e27b2df9178b6e8da395
+| Author: John Hoffman <jah5@princeton.edu>
+| Date:   Wed Sep 9 09:29:28 2015 -0400
+| 
+|     Finally fixed offset problem (or so I think). It involved not putting a +1 at the end of Kout and in the relevant places in the fftXd_XX functions. Also removed the sang_correction option and some references to the save-phi-grid option. Also fixed a problem with parameter output that Bruce ran into; if you do a diffscat calculation and define material-file and ephot, GGADT lies about which index of refraction its using. The parameter output function uses ior-re and ior-im, but it SHOULD use ior_res_single_en(j) and ior_ims_single_en(j) where j is the material index.
+|  
 * commit 5a4316afc9fa9523c2d139d93a14ab394d11031c
 | Author: John Hoffman <jah5@princeton.edu>
 | Date:   Thu Sep 3 19:08:48 2015 -0400
